# icedash

./: .gitignore  README.md  flutter_launcher_icons.yaml  pubspec.yaml  todoses.md
.github/workflows/: flutter_build_release.yml
android/app/: build.gradle.kts
assets/.obsidian/: workspace.json
assets/images/: 1x1_obstacle.png~  box.png~  fade.png~  ice.png~  iceCube.png~  lock.png~  player.kra  player.kra-autosave.kra  player.kra~  player.png~  wall.kra  wall.kra~  wall.png-autosave.kra  wall_corner.png~  wall_corner_in.png~  wall_corner_out.png-autosave.kra  wall_corner_out.png~  wall_double_corner.png~  wall_e.png~  wall_n.png~  wall_w.png~  weakwall.png-autosave.kra  weakwall.png~
assets/map/: Root.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  direction.dart  extensions.dart  game.dart  main.dart  room_traversal.dart  snow.dart  tile.dart  tiling.dart  world.dart
lib/BoardDescriptionChains/: Interpolator.dart  easy.dart  extreme.dart  hard.dart  normal.dart
lib/components/: IceCube.dart  actor.dart  player.dart  (+4 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: asset_map.rs  board_description.rs  dart_board.rs  direction.rs  main.rs  mod.rs  pos.rs  simple.rs  tile.rs
rust/src/logic/: board.rs  creature.rs  gate.rs  matrix.rs  mod.rs  neighbour.rs  noise_reduction.rs  pos.rs  solver.rs  tile_map.rs  tile_map_wrap.rs  visitations.rs  worker_pool.rs
rust/src/tests/: test.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+51 files in other folders)
