[package]
name = "rust_lib_icedash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rand = "0.9.2"
sorted-vec = "0.8.10"
itertools = "0.14.0"
cap = "0.1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
